--- a/css/epos-print-editor.css
+++ b/css/epos-print-editor.css
@@ -83,10 +83,11 @@ textarea {
 #edit-right {
     float: left;
     width: 40%;
+    transform: translateX(1rem);
 }
 #edit-preview {
     float: right;
-    width: 25%;
+    width: 33%;
 }
 #edit-sequence {
     background-color: #c0c0c0;
